# ms-campaign-generation-ai

./: .gitignore  ARCHITECTURE.md  CHANGELOG_INTEGRATION.md  CLEANUP_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  TEST_GUIDE.md  UI_SETUP.md  WORKFLOW.md  contacts_mcp.py  draw_workflow.py  main.py  pyproject.toml  requirements.txt  server.py  setup.sh  start-dev.sh  test_contacts_mcp.py
client/: README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.jsx
client/src/components/: ChatInput.jsx  ChatMessage.jsx  ChatPanel.jsx
client/src/hooks/: useWebSocket.js
client/src/services/: websocket.js
client/src/styles/: App.css  ChatInput.css  ChatMessage.css  ChatPanel.css
client/src/types/: chat.js
sft/: Finetuning_Gemma.ipynb  requirements.txt  smart_lists_training.csv  smart_lists_training_all.csv  train_qlora.py  train_qlora_colab.py
src/: __init__.py  __main__.py  campaign-generator.py  campaign_generator.py  models.py  nodes.py  prompts.py  websocket_nodes.py  workflow.py
src/api/: __init__.py  connection_manager.py  websocket_handler.py
src/constants/: __init__.py  interaction_types.py
src/mcp/: __init__.py  campaigns_mcp.py  contacts_mcp.py
src/utils/: __init__.py  image_utils.py  llm_utils.py  location_utils.py  workflow_visualizer.py
src/workflows/: __init__.py  executor.py  retry_smart_list_nodes.py  review_email_template_nodes.py  review_smart_list_nodes.py  schedule_confirmation_nodes.py  websocket_nodes.py  websocket_workflow.py
